# ci_connect

./: README.md  pyproject.toml
.github/: connect.yml
.github/workflows/: connect.yml
